# goit-web-hw-05

./: pyproject.toml
task_1/: main.py
task_2/chat/: exchange_rate_fetcher.py  server.py
task_2/chat/static/: style.css
task_2/chat/templates/: index.html
