[tool.poetry]
name = "goit-web-hw-05"
version = "0.1.0"
description = ""
authors = ["Shpetynya <olga.shpetnaja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
websockets = "^13.1"
aiofile = "^3.9.0"
aiopath = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
